fixed overflow bug - but left behind a FIXME

--- a/appengine/static/css/style.css
+++ b/appengine/static/css/style.css
@@ -547,6 +547,7 @@ ol.is-list{
   -ms-flex-order:2;
   order:2;
   padding-bottom:20px;
+  max-width:75% !important;
 }
 .section{
   max-width:100%;
